--- a/Board/src/main/resources/templates/board/modify.html
+++ b/Board/src/main/resources/templates/board/modify.html
@@ -2,18 +2,18 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Board : 수정 페이지</title>
 </head>
 <body>
-	<form th:action="@{/board/updateBoard.do}" th:object=${board} method="post">
+	<form th:action="@{/board/updateBoard.do}" th:object="${board}" method="post">
 		<table>
 				<tr>
 					<td>번호</td>
-					<td th:text="${board.boardIdx}"></td> 
+					<td><input type="text" name="boardIdx" th:field="${board.boardIdx}" readonly="readonly"/> </td> 
 					<td>제목</td>
 					<td><input type="text" name="title" th:field="${board.title}"></td>
 					<td>작성자</td>
-					<td th:text="${board.memId}"></td>
+					<td><input type="text" name="memId" th:field="${board.memId}" readonly="readonly"></td>
 					<td>조회수</td>
 					<td th:text="${board.viewCount}"></td>
 				</tr>
